<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MovieSelectionActivity">

    <LinearLayout
        android:id="@+id/barsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bar1"
            android:layout_width="70dp"
            android:layout_height="4dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/bar_unselected" />

        <ImageView
            android:id="@+id/bar2"
            android:layout_width="70dp"
            android:layout_height="4dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/bar_selected" />

        <ImageView
            android:id="@+id/bar3"
            android:layout_width="70dp"
            android:layout_height="4dp"
            android:background="@drawable/bar_unselected" />
    </LinearLayout>

    <TextView
        android:id="@+id/movie_selection_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/movie_selection_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/barsLayout" />

    <TextView
        android:id="@+id/movies_selected_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/movies_selected_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/movie_selection_title_textview" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_movies_shows"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="@dimen/padding_movies_shows"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movies_selected_textview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EDEDEE"
            android:orientation="horizontal"
            android:paddingStart="15dp">

            <ImageButton
                android:id="@+id/floating_search_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="6"
                android:backgroundTint="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/search_img"
                app:srcCompat="@drawable/search_img"
                android:contentDescription="@string/search_button_icon_description" />

            <EditText
                android:id="@+id/floating_search_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/movies_shows_search_text"
                android:inputType="text" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/continue_button_movies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:backgroundTint="@color/disabled_grey"
        android:enabled="false"
        android:text="@string/continue_button_text"
        android:textColor="@color/secondary_grey"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/moviesRecyclerView" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/moviesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9001122" />

</androidx.constraintlayout.widget.ConstraintLayout>
